--- a/src/global.scss
+++ b/src/global.scss
@@ -28,6 +28,12 @@
 @import "~@swimlane/ngx-datatable/index.css";
 @import "~@swimlane/ngx-datatable/themes/material.scss";
 @import "~@swimlane/ngx-datatable/assets/icons.css";
+@import "~@swimlane/ngx-datatable/themes/bootstrap.scss";
+
+// @import '~@swimlane/ngx-datatable/index.css';
+// @import '~@swimlane/ngx-datatable/themes/material.scss';
+// @import '~@swimlane/ngx-datatable/themes/dark.scss';
+// @import '~@swimlane/ngx-datatable/assets/icons.css';
 
 body {
   padding: 0;
