--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -16,19 +16,20 @@
 <ion-content>
   <div class="ion-padding">
     <ngx-datatable
-      class="material"
+      class="bootstrap expandable virtualized"
       [limit]="8"
       [rows]="rows"
       [columns]="columns"
       [columnMode]="'force'"
       [headerHeight]="50"
       [footerHeight]="50"
-      [rowHeight]="200"
+      [rowHeight]="'auto'"
       (sort)="onSort($event)"
       [sorts]="this.sortOrder"
       (reorder)="rearrange($event)"
       (cdkObserveContent)="adjustColumnMinWidth()"
       [scrollbarH]="true"
+      id="datatablele"
     >
       <ngx-datatable-column
         [name]="column.name"
@@ -36,16 +37,15 @@
         *ngFor="let column of columns"
         [cellClass]="column.name === 'Image' ? 'class1' : 'class2'"
         [minWidth]="column.minWidth"
+        [canAutoResize]="true"
+        id="class3"
       >
         <ng-template
           let-column="column"
           let-sort="sortFn"
           ngx-datatable-header-template
         >
-          <span
-            class="datatable-header-cell-wrapper"
-            [style]="{flexWrap:'wrap', display: 'flex'}"
-          >
+          <span class="datatable-header-cell-wrapper">
             <span
               class="datatable-header-cell-label draggable"
               (click)="sort($event)"
@@ -63,11 +63,7 @@
           [draggable]="false"
         >
           <div *ngIf="column.name === 'Image'">
-            <img
-              [attr.aria-label]="value"
-              [src]="value"
-              style="width: 400px; height: 200px"
-            />
+            <img [attr.aria-label]="value" [src]="value" />
           </div>
           <div *ngIf="column.name !== 'Image'">
             <div
