--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -40,8 +40,19 @@
 .test34 {
     // white-space: pre-line;
     // white-space: normal;
-    span::after {
-        content: "\n";
-        white-space: pre;
-    }
+    // span::after {
+    //     content: "\n";
+    //     white-space: pre;
+    // }
+}
+.datatable-scroller {
+    width: 100% !important;
+}
+.datatable-body-cell {
+    // padding: 0 !important;
+    // background-color: red;
+    // width: auto;
+}
+.class3 {
+    width: auto;
 }
