--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -28,10 +28,10 @@
 //     // width: 30;
 //     width: fit-content;
 // }
-.class1 {
-    width: fit-content !important;
-    height: 100% !important;
-}
+// .class1 {
+//     width: fit-content !important;
+//     height: 100% !important;
+// }
 // background-color: red;
 .class2 {
     // width: fit-content !important;
@@ -45,14 +45,14 @@
     //     white-space: pre;
     // }
 }
-.datatable-scroller {
-    width: 100% !important;
-}
+// .datatable-scroller {
+//     width: 100% !important;
+// }
 .datatable-body-cell {
     // padding: 0 !important;
     // background-color: red;
     // width: auto;
 }
-.class3 {
-    width: auto;
-}
+// .class3 {
+//     width: auto;
+// }
