Working in progress with resising column

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -29,6 +29,7 @@
       (reorder)="rearrange($event)"
       (cdkObserveContent)="adjustColumnMinWidth()"
       [scrollbarH]="true"
+      (resize)="resize($event)"
     >
       <ngx-datatable-column
         [name]="column.name"
