--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -55,4 +55,13 @@
 }
 // .class3 {
 //     width: auto;
+// // }
+// .datatable-body-row,
+// .datatable-scroll {
+//     max-width: 100%;
+//     min-width: 100%;
 // }
+
+.datatable-scroll {
+    display: inherit !important;
+}
