Adding css styles and making the drag working on the mobile

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -11,6 +11,8 @@
     ></ion-toggle>
     <ion-label> Hide {{toogle.name}}</ion-label>
   </ion-item>
+</div>
+<div>
   <ion-item>
     <ion-toggle
       [checked]="this.rowHeight"
@@ -35,8 +37,9 @@
       [sorts]="this.sortOrder"
       (reorder)="rearrange($event)"
       [scrollbarH]="true"
-      (cdkObserveContent)="adjustColumnMinWidth()"
       (resize)="resize($event)"
+      [swapColumns]="true"
+      (cdkObserveContent)="adjustColumnMinWidth()"
     >
       <ngx-datatable-column
         [name]="column.name"
@@ -48,21 +51,38 @@
         [canAutoResize]="true"
         [flexGrow]="0"
         id="class3"
+        [draggable]="true"
       >
+        <!-- [canAutoResize]="true" -->
         <ng-template
           let-column="column"
           let-sort="sortFn"
           ngx-datatable-header-template
         >
+          <!-- <ion-reorder-group
+            class="datatable-header-cell-wrapper"
+            style="height: 100px"
+            (ionItemReorder)="handleReorder($any($event))"
+            [disabled]="false"
+          > -->
+          <!-- <ion-reorder
+              class="datatable-header-cell-label draggable"
+              (click)="sort($event)"
+              [attr.aria-label]="column.name"
+            > -->
           <span class="datatable-header-cell-wrapper" style="height: 100px">
             <span
               class="datatable-header-cell-label draggable"
               (click)="sort($event)"
               [attr.aria-label]="column.name"
-            >
-              {{ column.name }}
-            </span>
+            ></span>
           </span>
+          {{ column.name }}
+          <!-- </span> -->
+          <!-- (drop)="ondrop($event)"
+              (dragover)="allowDrop($event)" -->
+          <!-- </ion-reorder> -->
+          <!-- </ion-reorder-group> -->
         </ng-template>
         <ng-template
           let-value="value"
@@ -72,7 +92,12 @@
           [draggable]="true"
         >
           <div *ngIf="column.name === 'Image'">
-            <img [attr.aria-label]="value" [src]="value" style="width: 100%" />
+            <img
+              [attr.aria-label]="value"
+              [src]="value"
+              style="width: 100%"
+              [class]="this.rowHeight === undefined ? '' : 'heightResize'"
+            />
           </div>
           <!-- <div *ngIf="desktopPlatforme == true else Mobile"> -->
           <div *ngIf="column.name !== 'Image'">
@@ -94,6 +119,7 @@
               [ngStyle]="{width:'100%', minHeight:'auto'}"
             >
             </textarea>
+            <!-- height: calc(100% - 50px) -->
           </div>
           <!-- </div> -->
           <!-- <ng-template #Mobile>
@@ -122,4 +148,20 @@
       </ngx-datatable-column>
     </ngx-datatable>
   </div>
+  <!-- <ion-reorder-group
+    class="datatable-header-cell-wrapper"
+    style="height: 100px"
+    (ionItemReorder)="handleReorder($any($event))"
+    [disabled]="false"
+  >
+    <ion-reorder class="datatable-header-cell-label draggable">
+      <ion-item> Item1 </ion-item>
+    </ion-reorder>
+    <ion-reorder class="datatable-header-cell-label draggable">
+      <ion-item> Item2 </ion-item>
+    </ion-reorder>
+    <ion-reorder class="datatable-header-cell-label draggable">
+      <ion-item> Item3 </ion-item>
+    </ion-reorder>
+  </ion-reorder-group> -->
 </ion-content>
