--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -67,13 +67,14 @@
           <span
             style="height: 100px"
             class="datatable-header-cell-wrapper"
-            *ngIf="mobilePlatforme else deskTop "
+            *ngIf="iosPlaform || mobilePlatforme ||
+            ipadPlatform else deskTop "
           >
-            <!-- ()="onDragMoved($event)" -->
             <span
               class="datatable-header-cell-label draggable example-box"
               (click)="sort($event)"
               [attr.aria-label]="column.name"
+              (cdkDragStarted)="test($event)"
               cdkDrag
             >
               {{ column.name }}
@@ -130,5 +131,4 @@
       </ngx-datatable-column>
     </ngx-datatable>
   </div>
-  <!-- <ion-content > ... </ion-content> -->
 </ion-content>
