--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -97,24 +97,25 @@
 // font-size: 14px;
 // background: white;
 
-// .cdk-drag-preview {
-//     box-sizing: border-box;
-//     border-radius: 4px;
-//     box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
-//         0 3px 14px 2px rgba(0, 0, 0, 0.12);
-// }
+.cdk-drag-preview {
+    box-sizing: border-box;
+    border-radius: 4px;
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
+        0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    overflow-x: auto;
+}
 
-// .cdk-drag-placeholder {
-//     opacity: 0;
-// }
+.cdk-drag-placeholder {
+    opacity: 0;
+}
 
-// .cdk-drag-animating {
-//     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-// }
+.cdk-drag-animating {
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
 
-// .example-box:last-child {
-//     border: none;
-// }
+.example-box:last-child {
+    border: none;
+}
 
 // .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
 //     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
@@ -135,17 +136,17 @@
 // .ngx-datatable.fixed-header .datatable-header .datatable-header-inner .datatable-header-cell {
 //     overflow-x: auto;
 // }
-.ngx-datatable.material .datatable-header {
-    overflow: overlay;
-}
+// .ngx-datatable.material .datatable-header {
+//     overflow: overlay;
+// }
 
-.ngx-datatable.materia {
-    scroll-snap-type: x;
-}
-#cdk-drop-list-0 {
-    scroll-snap-type: x;
-    scroll-snap-type: x mandatory;
-}
+// .ngx-datatable.material {
+//     scroll-snap-type: x;
+// }
+// #cdk-drop-list-0 {
+//     scroll-snap-type: x;
+//     scroll-snap-type: x mandatory;
+// }
 
 // .server-scrolling-demo {
 //     scroll-snap-type: x;
