--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -64,22 +64,24 @@
           let-sort="sortFn"
           ngx-datatable-header-template
         >
-          <span
-            style="height: 100px"
-            class="datatable-header-cell-wrapper"
-            *ngIf="iosPlaform || mobilePlatforme ||
-            ipadPlatform else deskTop "
-          >
+          <datatable-scroller>
             <span
-              class="datatable-header-cell-label draggable example-box"
-              (click)="sort($event)"
-              [attr.aria-label]="column.name"
-              (cdkDragStarted)="test($event)"
-              cdkDrag
+              style="height: 100px"
+              class="datatable-header-cell-wrapper"
+              *ngIf="iosPlaform || mobilePlatforme ||
+          ipadPlatform else deskTop "
             >
-              {{ column.name }}
+              <span
+                class="datatable-header-cell-label draggable example-box"
+                (click)="sort($event)"
+                [attr.aria-label]="column.name"
+                (cdkDragStarted)="test($event)"
+                cdkDrag
+              >
+                {{ column.name }}
+              </span>
             </span>
-          </span>
+          </datatable-scroller>
         </ng-template>
         <ng-template #deskTop>
           <span style="height: 100px" class="datatable-header-cell-wrapper">
